--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_form1.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_form1.html
@@ -1,4 +1,4 @@
-<div class="w3-row w3-card">
+<div class="w3-row w3-card w3-topbar">
 	<div class="w3-half">
 		<div ng-style="progr_am.fn.ngStyle('json_form', {direction:'rtl'})">
 			<div style="direction: ltr"
