icpc2_test3 enu bar color design

--- a/src/main/resources/static/f/eh1/info1/test3/icpc2_test3.html
+++ b/src/main/resources/static/f/eh1/info1/test3/icpc2_test3.html
@@ -1,10 +1,8 @@
 <div ng-include="'/f/eh1/info1/test2/f74-head2.html'"></div>
-<div>
+<div class="w3-topbar w3-border-bottom w3-border-blue-gray w3-small">
 	<span class="w3-small"> вибір: </span> <span
 		ng-include="'/f/eh1/info1/test2/physician_choose_button.html'">
-	</span>
-	—
-	 <span ng-include="'/f/eh1/info1/test2/physicain_fullname.html'"></span>
+	</span> — <span ng-include="'/f/eh1/info1/test2/physicain_fullname.html'"></span>
 </div>
 
 <table>
