first declaration page commit

--- a/src/main/resources/static/f/eh1/info1/info1.html
+++ b/src/main/resources/static/f/eh1/info1/info1.html
@@ -29,6 +29,7 @@
 				<a href="/v/{{k}}">
 				<span ng-bind-html="site.alias"></span>
 				 - <span class="w3-tiny">({{k}})</span>
+				 {{site.title}}
 				</a>
 			</div>
 		</div>
