--- a/src/main/resources/static/f/eh1/info2/info2.html
+++ b/src/main/resources/static/f/eh1/info2/info2.html
@@ -1,6 +1,8 @@
 <div>
 	<h1 class="w3-small" style="text-decoration: overline;">
-		<span style="text-decoration: underline;"> ДП "еЗдоров'я"</span>
+		<a class="w3-hover-light-gray w3-hover-shadow" href="/"> <i
+			class="fa fa-home"></i>
+		</a> | <span style="text-decoration: underline;"> ДП "еЗдоров'я"</span>
 	</h1>
 	<div ng-repeat="(group_k, group_v) in eHealth"
 		ng-if="group_v.isObject()">
