--- a/src/main/resources/static/f/eh1/lib/table_json_editor.html
+++ b/src/main/resources/static/f/eh1/lib/table_json_editor.html
@@ -1,25 +1,21 @@
-<div class="w3-border-bottom w3-display-container" 
-ng-repeat="group_v in [eHealth.pageGroup()]">
-  <a class="w3-hover-light-gray" title="" href="/v/info2"><i
-    class="fa fa-arrow-up"></i></a> <span
-    ng-include="'/f/eh1/info2/info2_group_links.html'"> </span>
-    <span class="w3-text-light-gray">
-    |
-    </span>
-  <button ng-click="progr_am.fn.save()"
-    class=" w3-border  w3-text-blue-gray ">
-    <i class="fa fa-save"></i> Зберегти
-  </button>
-  <span class="w3-tiny">
-  {{editDoc_CRC32}}
-  </span>
-  <span
-    class="w3-display-topright"
-     ng-include="'/f/algoritmed/lib/link-to-login2.html'">
-     </span>
+<div class="w3-border-bottom w3-display-container"
+	ng-repeat="group_v in [eHealth.pageGroup()]">
+	<a class="w3-hover-light-gray w3-hover-shadow" title="" href="/v/info2"><i
+		class="fa fa-arrow-up"></i></a> <a
+		class="w3-hover-light-gray w3-hover-shadow" href="/"><i
+		class="fa fa-home"></i></a> <span
+		ng-include="'/f/eh1/info2/info2_group_links.html'"> </span> <span
+		class="w3-text-light-gray"> | </span>
+	<button ng-click="progr_am.fn.save()"
+		class=" w3-border  w3-text-blue-gray ">
+		<i class="fa fa-save"></i> Зберегти
+	</button>
+	<span class="w3-tiny"> {{editDoc_CRC32}} </span> <span
+		class="w3-display-topright"
+		ng-include="'/f/algoritmed/lib/link-to-login2.html'"> </span>
 </div>
 
 <div ng-repeat="(k,view) in progr_am.viewes">
-  <div ng-repeat="data in [data[view.dataName]]" ng-init="o=data"
-    ng-include="view.ngInclude"></div>
+	<div ng-repeat="data in [data[view.dataName]]" ng-init="o=data"
+		ng-include="view.ngInclude"></div>
 </div>
