--- a/src/main/resources/static/f/eh1/info2/declaration1/declaration_cols.html
+++ b/src/main/resources/static/f/eh1/info2/declaration1/declaration_cols.html
@@ -1,5 +1,2 @@
-<div ng-switch-when="pip">
- {{row.family_name}}
- {{row.first_name}}
-  {{row.second_name}}
-</div>
+<div ng-switch-when="pip">{{row.family_name}} {{row.first_name}}
+	{{row.second_name}}</div>
