msp_page print style

--- a/src/main/resources/static/f/eh1/info2/info2.html
+++ b/src/main/resources/static/f/eh1/info2/info2.html
@@ -1,8 +1,8 @@
 <div>
 	<h1 class="w3-small" style="text-decoration: overline;">
 		<a class="w3-hover-light-gray w3-hover-shadow" href="/"> <i
-			class="fa fa-home"></i>
-		</a> | <span style="text-decoration: underline;"> ДП "еЗдоров'я"</span>
+			class="fa fa-home"></i></a> | <span style="text-decoration: underline;">
+			ДП "еЗдоров'я"</span> | development
 	</h1>
 	<div ng-repeat="(group_k, group_v) in eHealth"
 		ng-if="group_v.isObject()">
