--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_form1.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_form1.html
@@ -1,12 +1,13 @@
 <div class="w3-row w3-card w3-topbar">
 	<div class="w3-half">
 		<div ng-style="progr_am.fn.ngStyle('json_form', {direction:'rtl'})">
-			<div style="direction: ltr"
+			<div ng-if="editDoc" style="direction: ltr"
 				ng-include="'/f/eh1/info2/hrm_cards/json_form.html'"></div>
 		</div>
 	</div>
 	<div class="w3-half w3-container w13-border-top"
 		ng-style="progr_am.fn.ngStyle('json_form')">
-		<div ng-include="'/f/eh1/info2/hrm_cards/json_oToEdit_edit.html'"></div>
+		<div ng-if="editDoc"
+			ng-include="'/f/eh1/info2/hrm_cards/json_oToEdit_edit.html'"></div>
 	</div>
 </div>
