--- a/src/main/resources/static/f/eh1/info2/hrm_cards/j2c_table.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/j2c_table.html
@@ -17,8 +17,11 @@
 					ng-class="{'w3-topbar w3-bottombar':data.fn.isEditRow(row)}"
 					ng-repeat="col_k in data.col_sort" on="col_k" ng-switch>
 					<div ng-switch-default>
-						{{row[col_k]}} {{data.fn_col[col_k](row)}}
-						<div ng-include="data.include_cols" on="col_k" ng-switch></div>
+						<div
+							ng-bind-html="highlight(row[col_k] + data.fn_col[col_k](row), progr_am.viewes.hrm_menu.seek)">
+						</div>
+						<div ng-include="
+							data.include_cols" on="col_k" ng-switch></div>
 					</div> <a ng-switch-when="person_id" href="?person_id={{row[col_k]}}">
 						{{row[col_k]}} </a> <a ng-switch-when="division_id"
 					href="?division_id={{row[col_k]}}"> {{row[col_k]}} </a>
