--- a/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_menu.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_menu.html
@@ -5,4 +5,12 @@
 	><i class="fa fa-filter fa-3"></i></a> <input class="w3-border"
 		ng-model="progr_am.viewes.hrm_menu.seek"
 		placeholder="{{progr_am.viewes.hrm_menu.seek_placeholder}}">
+		
+		<button
+		class="w3-border"
+  ng-if="request.viewKey=='declaration'
+&& !request.parameters.declaration
+">
+  Скласти - Декларацію з лікарем</button>
+		
 </div>
