--- a/src/main/resources/static/f/eh2/info/info3.html
+++ b/src/main/resources/static/f/eh2/info/info3.html
@@ -2,9 +2,9 @@
 	<h1 class="w3-small" style="text-decoration: overline;">
 		<a class="w3-hover-light-gray w3-hover-shadow" href="/"> <i
 			class="fa fa-home"></i></a> | <span style="text-decoration: underline;">
-			ДП "еЗдоров'я"</span> | development
+			МІС-Алгорітмед</span> | development
 	</h1>
-	<div ng-repeat="(group_k, group_v) in pageGroup.eHealth"
+	<div ng-repeat="(group_k, group_v) in pageGroup.misAlgoritmed3"
 		ng-if="group_v.isObject()">
 		<span ng-include="'/f/eh1/info2/info2_group_links.html'"></span>
 	</div>
