--- a/src/main/resources/static/f/eh1/lib/table_json_editor.html
+++ b/src/main/resources/static/f/eh1/lib/table_json_editor.html
@@ -1,5 +1,5 @@
 <div class="w3-border-bottom w3-display-container no-print"
-	ng-repeat="group_v in [eHealth.pageGroup()]">
+	ng-repeat="group_v in [pageGroup.thisPageGroup()]">
 	<div ng-include="'/f/eh1/lib/topbar_page_group.html'"></div>
 </div>
 
