--- a/src/main/resources/static/f/eh1/info2/hrm_cards/j2c_table.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/j2c_table.html
@@ -25,10 +25,12 @@
 							data.include_cols" on="col_k" ng-switch></div>
 					</div> 
 					<div ng-switch-when="person_id" on="request.viewKey" ng-switch>
-							<a ng-switch-when="hrm_cards2" href="?person_id={{row[col_k]}}">a1
+							<a ng-switch-when="hrm_cards2" href="?person_id={{row[col_k]}}">
 								{{row[col_k]}} </a> 
-							<a ng-switch-when="declaration"
-							href="?person_id={{row[col_k]}}&declaration={{row.declaration}}&seek={{progr_am.viewes.hrm_menu.seek}}"> a2 {{row[col_k]}} </a>
+							<a ng-switch-when="declaration|declaration3"
+							ng-switch-when-separator="|"
+							href="?person_id={{row[col_k]}}&declaration={{row.declaration}}&seek={{progr_am.viewes.hrm_menu.seek}}"> 
+							{{row[col_k]}} </a>
 					</div> <a ng-switch-when="division_id"
 					href="?division_id={{row[col_k]}}"> {{row[col_k]}} </a>
 					<a ng-switch-when="pip_phisician"
