calendar edit dialog

--- a/src/main/resources/static/f/eh2/calendar/calendar3_month.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3_month.html
@@ -12,12 +12,13 @@
 		ng-click="basicCalendar.gui.goWeek(w)"
 		>
 			{{basicCalendar.gui.dayOfMonthOfWeekMonth(w,1)|date:'ww'}}</td>
-		<td ng-repeat="d in basicCalendar.gui.daysOfWeek"
-			ng-click="basicCalendar.gui.setWorkTimeStampDay(w,d)"
-			class="w3-border w3-display-container w3-hover-shadow"
+		<td
+			class="w3-border w3-display-container w3-hover-shadow w3-dropdown-click"
 			ng-class="{'w3-border-black w3-light-gray':
 			basicCalendar.gui.isToday(basicCalendar.gui.dayOfMonthOfWeekMonth(w,d)),
-			'w3-border-blue':basicCalendar.gui.isWorkTimeStampDay(w,d)}">
+			'w3-border-blue':basicCalendar.gui.isWorkTimeStampDay(w,d)}"
+			ng-repeat="d in basicCalendar.gui.daysOfWeek"
+			ng-click="basicCalendar.gui.setWorkTimeStampDay(w,d)">
 			<div class="w3-display-topleft w3-tiny"
 				ng-class="{'w3-text-gray':!basicCalendar.gui.isWorkTimeStampMonth(w,d)}">
 				<div ng-if="w_index==0">
@@ -29,6 +30,10 @@
           {{basicCalendar.isToday(basicCalendar.dayOfMonthOfWeekMonth(w,d))}}
            -->
 			<p>&nbsp;</p>
+			<div class="w3-dropdown-content w3-border w3-card-4"
+				ng-class="{'w3-show':basicCalendar.gui.editDialogOpen && basicCalendar.gui.isWorkTimeStampDay(w,d)}"
+				ng-if="basicCalendar.gui.editDialogOpen && basicCalendar.gui.isWorkTimeStampDay(w,d)">
+				a1</div>
 		</td>
 	</tr>
 </table>
