--- a/src/main/resources/static/f/eh2/calendar/calendar3_top_page.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3_top_page.html
@@ -15,4 +15,7 @@ class="w3-hover-light-gray w3-hover-shadow"
 ><i class="fa fa-chevron-right"></i></a>
 <span class="w13-tiny am-b">
 {{basicCalendar.gui.workTimeStamp|date:'dd.MMMM.yyyy'}}
+<span class="w3-tiny am-normal">
+{{basicCalendar.gui.workTimeStamp|date:'hh:mm'}}
+</span>
 </span>
