--- a/src/main/resources/static/f/eh2/calendar/calendar3_week.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3_week.html
@@ -2,15 +2,26 @@
 	<tr class="w3-tiny">
 		<td class="w3-tiny w3-right">чч:хх</td>
 		<td ng-repeat="wd in basicCalendar.gui.daysOfWeek"
-			ng-class="{'w3-border-blue w3-border':basicCalendar.gui.isWorkTimeStampDay(wd),
+			ng-class="{'am-b w3-border-blue w3-border':basicCalendar.gui.isWorkTimeStampDay(wd),
 			'w3-text-gray':!basicCalendar.gui.isWorkTimeStampMonth(wd)}"
 			class=" w3-hover-gray">
 			{{basicCalendar.gui.workTimeStampWeekDay(wd)|date:'EEE d.M'}}</td>
 	</tr>
 	<tr ng-repeat="h in basicCalendar.gui.hoursOfWork">
-		<td class="w3-tiny w3-right w3-hover-gray">{{h}}</td>
+		<td class="w3-tiny w3-right w3-hover-gray"
+		ng-class="{'am-b':basicCalendar.gui.isWorkTimeStampHour(wd,h)}"
+		>{{h}}</td>
 		<td ng-repeat="wd in basicCalendar.gui.daysOfWeek"
-		ng-click="basicCalendar.gui.setWorkTimeStampDay(wd)"
-			class="w3-border w3-hover-shadow"></td>
+			ng-click="basicCalendar.gui.setWorkTimeStampDayHour(wd,h)"
+			ng-class="{'w3-border-blue':
+			basicCalendar.gui.isWorkTimeStampDayHour(wd,h)
+			}"
+			class="w3-border w3-hover-shadow  w3-dropdown-click">
+			<div class="w3-dropdown-content w3-border w3-card-4"
+				ng-class="{'w3-show':basicCalendar.gui.editDialogOpen 
+    && basicCalendar.gui.isWorkTimeStampDayHour(wd,h)}"
+				ng-if="basicCalendar.gui.editDialogOpen 
+    && basicCalendar.gui.isWorkTimeStampDayHour(wd,h)">a1</div>
+		</td>
 	</tr>
 </table>
