--- a/src/main/resources/static/f/eh1/info2/hrm_cards/j2c_table.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/j2c_table.html
@@ -1,39 +1,49 @@
 <div class="w3-card" ng-style="progr_am.fn.ngStyle('j2c_table')">
-	<table>
+	<table class="w13-table">
 		<thead>
 			<tr class="w3-tiny w3-gray">
 				<th style="background: white;"
 					ng-include="'/f/eh1/lib/table_menu.html'"></th>
-				<th ng-repeat="col_k in data.col_sort" title="{{col_k}}">
-					{{data.data.col_keys[col_k]}}</th>
+				<th ng-repeat="col_k in data.col_sort" title="{{col_k}}"
+					ng-init="head_col_k='head_'+col_k">
+					<div ng-include="
+              data.include_cols" on="head_col_k"
+						ng-switch></div> {{data.data.col_keys[col_k]}}
+				</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr ng-repeat="row in data.data.list" ng-init="row_k=$index"
 				n1g-class="{'w3-blue-gray':data.fn.isEditRow(row)}"
 				class="w3-hover-light-gray">
-				<td class="w3-small" ng-class="{'w3-gray ':progr_am.fn.isEditRow(row)}">{{row_k}}
+				<td class="w3-small" 
+				ng-class="{
+				'w13-gray am-b':progr_am.fn.isEditRow(row),
+				}">{{row_k}}
 				</td>
-				<td class="w3-border-bottom w3-hover-shadow"
-					ng-class="{'w3-topbar w3-bottombar':progr_am.fn.isEditRow(row)}"
-					ng-repeat="col_k in data.col_sort" on="col_k" ng-switch>
+				<td ng-repeat="col_k in data.col_sort" on="col_k" ng-switch
+					ng-click="progr_am[view.dataName].selectCell(row_k, col_k)"
+					class="w3-border-bottom w3-hover-shadow"
+					ng-class="{
+					'w3-topbar w3-bottombar':progr_am.fn.isEditRow(row),
+					'w3-leftbar':0==$index && progr_am.fn.isEditRow(row),
+					 'w3-border-left':(0==$index && !progr_am.fn.isEditRow(row)),
+					}">
 					<div ng-switch-default>
 						<div
 							ng-bind-html="highlight(row[col_k] + data.fn_col[col_k](row), progr_am.viewes.hrm_menu.seek)">
 						</div>
 						<div ng-include="
 							data.include_cols" on="col_k" ng-switch></div>
-					</div> 
+					</div>
 					<div ng-switch-when="person_id" on="request.viewKey" ng-switch>
-							<a ng-switch-when="hrm_cards2" href="?person_id={{row[col_k]}}">
-								{{row[col_k]}} </a> 
-							<a ng-switch-when="declaration|declaration3"
+						<a ng-switch-when="hrm_cards2" href="?person_id={{row[col_k]}}">
+							{{row[col_k]}} </a> <a ng-switch-when="declaration|declaration3"
 							ng-switch-when-separator="|"
-							href="?person_id={{row[col_k]}}&declaration={{row.declaration}}&seek={{progr_am.viewes.hrm_menu.seek}}"> 
+							href="?person_id={{row[col_k]}}&declaration={{row.declaration}}&seek={{progr_am.viewes.hrm_menu.seek}}">
 							{{row[col_k]}} </a>
-					</div> <a ng-switch-when="division_id"
-					href="?division_id={{row[col_k]}}"> {{row[col_k]}} </a>
-					<a ng-switch-when="pip_phisician"
+					</div> <a ng-switch-when="division_id" href="?division_id={{row[col_k]}}">
+						{{row[col_k]}} </a> <a ng-switch-when="pip_phisician"
 					href="?declaration={{row.declaration}}&seek={{progr_am.viewes.hrm_menu.seek}}"
 					ng-bind-html="highlight(row[col_k] + data.fn_col[col_k](row), progr_am.viewes.hrm_menu.seek)">
 				</a>
