--- a/src/main/resources/static/f/eh2/calendar/calendar3.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3.html
@@ -2,7 +2,14 @@
 	ng-repeat="group_v in [pageGroup.thisPageGroup()]">
 	<div ng-include="'/f/eh1/lib/topbar_page_group.html'"></div>
 </div>
-<div
-	ng-include="'/f/eh2/calendar/calendar3_'+basicCalendar.gui.calendarViewPart.item+'.html'">
 
+<div ng-repeat="(k,view) in progr_am.viewes"
+	ng-init="data=data[view.dataName]" ng-if="view.ngInclude"
+	ng-include="view.ngInclude"></div>
+
+<!--
+<div
+	ng-include="'/f/eh2/calendar/calendar3_' 
+	+ basicCalendar.gui.calendarViewPart.item+'.html'">
 </div>
+-->
