calendar dialog and 2.0.3 spring-boot

--- a/src/main/resources/static/f/eh1/info1/test3/icpc2_test3_cols.html
+++ b/src/main/resources/static/f/eh1/info1/test3/icpc2_test3_cols.html
@@ -2,7 +2,8 @@
 	<i class="fa fa-calendar-o"></i>
 </div>
 <div ng-switch-when="creat_date"
-	title="{{row.created | date : 'longDate'}}/{{row.updated | date : 'short'}}">
+	title="{{row.created | date : 'longDate'
+	}} {{row.created | date : 'hh:mm'}}/{{row.updated | date : 'short'}}">
 	{{row.created|date:'dd.MM'}} <span class="w3-tiny"
 		title="{{row.family_name}} {{
               row.first_name}} {{
