--- a/src/main/resources/static/f/eh2/calendar/calendar3_dialog.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3_dialog.html
@@ -1,16 +1,38 @@
 <div style="max-width: 400px; width: 300px">
-	<div class="w3-tiny w3-gray">Перенести запис на?</div>
-	<div class="w3-container">
-		&nbsp;
-		<div class="w3-card">
-			{{basicCalendar.gui.workTimeStamp|date:'fullDate'}}
-			<div>
-				{{basicCalendar.gui.workTimeStamp|date:'shortTime'}}</div>
-			<div class="w13-border am-b">{{editRow.col_10766}}</div>
+	<div ng-if="!editRow">
+		<div class="w3-tiny w3-gray">Вибрати пацієнта із записаних на
+			цей день</div>
+			&nbsp;
+		<div
+			ng-repeat="row in icpc2_nakaz74.mapDate
+      [(basicCalendar.gui.getWorkTimeStampWeekDay(wd)|date:'dd.MM.yy')]
+      .hours[h]"
+			ng-click="progr_am.fn.openAppointmentDialog(row);" 
+			class="w3-hover-shadow"
+			ng-class="{
+      'am-b':progr_am.fn.isEditRow(row)
+      }">
+			<span class="w3-tiny"> {{row.created|date:'hh:mm'}} </span>
+			{{row.col_10766.split('тел.')[0]}}
 		</div>
 		&nbsp;
-		<div>
-			<button class="w3-border">ОК</button>
+	</div>
+	<div ng-if="editRow">
+		<div class="w3-tiny w3-gray">Перенести запис на?</div>
+		<div class="w3-container">
+			<div class="w3-text-red w3-tiny"
+				ng-if="basicCalendar.gui.isWorkTimeStampBeforeToday()">Обрана
+				дата знаходиться в минулому.</div>
+			&nbsp;
+			<div class="w3-card">
+				{{basicCalendar.gui.workTimeStamp|date:'fullDate'}}
+				<div>{{basicCalendar.gui.workTimeStamp|date:'shortTime'}}</div>
+				<div class="w13-border am-b">{{editRow.col_10766}}</div>
+			</div>
+			&nbsp;
+			<div>
+				<button ng-click="progr_am.fn.setAppointment()" class="w3-border">ОК</button>
+			</div>
 		</div>
 	</div>
 </div>
