--- a/src/main/resources/static/f/eh2/calendar/calendar3_registry_data.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3_registry_data.html
@@ -5,10 +5,13 @@
 			ng-repeat="row in icpc2_nakaz74.mapDate
       [(basicCalendar.gui.getWorkTimeStampWeekDay(wd)|date:'dd.MM.yy')]
       .hours[h]"
+      ng-click="progr_am.fn.openAppointmentDialog(row);"
+      class="w3-hover-shadow"
 			ng-class="{
       'am-b':progr_am.fn.isEditRow(row)
       }">
-			{{1+$index}}) {{row.col_10766.split('тел.')[0]}}</div>
+       {{row.created|date:'HH:mm'}} 
+			 {{row.col_10766.split('тел.')[0]}}</div>
 	</div>
 	<div ng-if="'month'==basicCalendar.gui.calendarViewPart.item">
 		{{icpc2_nakaz74.mapDate[(basicCalendar.gui.dayOfMonthOfWeekMonth(w,d)|date:'dd.MM.yy')].list.length}}
